# super-tiny-search-engine

./: .gitignore  README.md  main.py  pyproject.toml  test.py  utils.py
config/: config.py  dev.env
core/: analyzer.py  analyzer_factory.py  attribute.py  index.py  search.py  token_stream.py
core/analyzer/: analyzer.py  korean.py  standard.py  standard_analyzer.py
core/token_filter/: base.py  lowercase.py  token_filter.py
core/tokenizer/: base.py  korean.py  standard.py  tokenizer.py
model/: analyze.py  analyzer_base.py  common.py  index.py  search.py
service/: index.py  search.py
tests/: test_tokenizer.py
